fdo#53887 convert filter value as LIKE pattern only on (NOT) LIKE

Change-Id: I24d1f3af5d428e735a94fc9a69960244d0225513